# stitchy

./: Cargo.toml  README.md
src/: main.rs  sprite.rs
